new Learning component

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -13,7 +13,8 @@
 @import 'components/results';
 @import 'components/booking';
 @import 'components/breadcrumbs';
-@import 'components/search';
+@import 'components/resource';
+@import 'components/badge';
 
 .push-bottom {
 	margin-bottom: 30px;
