updated resource list/home page styles

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'common/variables';
 @import 'common/utils';
 @import 'common/global';
+@import 'common/typography';
 
 @import 'components/header';
 @import 'components/footer';
