stop using govuk grid and replace with .container instead, move phase-banner to Header, suggested tiles

--- a/src/ui/assets/styles/components/_header.scss
+++ b/src/ui/assets/styles/components/_header.scss
@@ -4,7 +4,7 @@
 
 	.header-wrapper {
 		background-color: $black;
-		max-width: 990px;
+		//max-width: 990px; //only use with logo image
 		margin: 0 auto;
 		padding-top: 8px;
 		padding-bottom: 8px;
