--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -1,8 +1,8 @@
-<header role="banner" id="global-header" class=" with-proposition">
-	<div class="header-wrapper">
+<header role="banner" id="global-header" class="with-proposition">
+	<div class="header-wrapper container">
 		<div class="header-global">
             <div class="header-logo">
-                <a href="/" title="Go to the Learning Platform homepage" id="logo" class="content">
+                <a href="/" title="Go to the Learning Platform homepage" id="logo">
                     Civil Service Learning
                 </a>
             </div>
@@ -18,3 +18,10 @@
 </header>
 
 <div id="global-header-bar"></div>
+<div class="phase-banner">
+    <p>
+        <strong class="phase-tag">BETA</strong>
+        <span>This is a new service – your
+            <a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
+    </p>
+</div>
