--- a/src/ui/assets/styles/_custom.scss
+++ b/src/ui/assets/styles/_custom.scss
@@ -1,17 +1,15 @@
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/colours'; // Colour variables
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/font_stack'; // Font family variables
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/measurements'; // Widths and gutter variables
+@import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/alpha-beta';
+@import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/buttons';
+@import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/breadcrumbs';
 // Mixins
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/conditionals'; // Media query mixin
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/device-pixels'; // Retina image mixin
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/grid_layout'; // Basic grid layout mixin
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/typography'; // Core bold and heading mixins, also external links
 @import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/shims'; // Inline block mixin, clearfix placeholder
-// Mixins to generate components (chunks of UI)
-@import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/alpha-beta';
-@import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/buttons';
-@import '../../../../node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/breadcrumbs';
-@import '../../../../node_modules/govuk-elements-sass/public/sass/elements/govuk-template-base';
 
 // GOV.UK elements
 
@@ -25,10 +23,12 @@
 // If you're not using govuk_template, uncomment the line below.
 // @import "../../../../node_modules/govuk-elements-sass/public/sass/elements/govuk-template-base";        // Base styles set by GOV.UK template
 
-// Objects (unstyled design patterns)
-@import '../../../../node_modules/govuk-elements-sass/public/sass/elements/layout'; // Main content container. Grid layout - rows and column widths
+@import 'common/layout'; // Main content container. Grid layout - rows and column widths
 
 // Components (chunks of UI)
+// Mixins to generate components (chunks of UI)
+
+@import '../../../../node_modules/govuk-elements-sass/public/sass/elements/govuk-template-base';
 @import '../../../../node_modules/govuk-elements-sass/public/sass/elements/elements-typography'; // Typography
 @import '../../../../node_modules/govuk-elements-sass/public/sass/elements/buttons'; // Buttons
 @import '../../../../node_modules/govuk-elements-sass/public/sass/elements/icons'; // Icons - numbered steps, calendar, search
