--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -17,10 +17,10 @@
 		{{course.shortDescription}}
 	</p>
 	<p class="tile__actions">
-		<a href="/prototypes/learner/v1/actions?action=addedToLearningPlan&amp;type=Online">
+		<a href="#">
 			Add to learning plan
 		</a>
-		<a href="/prototypes/learner/v1/actions?action=removedFromSuggestedList&amp;type=Online">
+		<a href="#">
 			Remove <span class="visuallyhidden">from suggested learning list</span>
 		</a>
 	</p>
