--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -17,11 +17,12 @@
 		{{course.shortDescription}}
 	</p>
 	<p class="tile__actions">
-		<a href="#">
+		<a href="/suggested-for-you/add/{{course.uid}}">
 			Add to learning plan
 		</a>
-		<a href="#">
-			Remove <span class="visuallyhidden">from suggested learning list</span>
+		<a href="/suggested-for-you/remove/{{course.uid}}">
+			Remove
+			<span class="visuallyhidden">from suggested learning list</span>
 		</a>
 	</p>
 </div>
