--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -17,10 +17,10 @@
 		{{course.shortDescription}}
 	</p>
 	<p class="tile__actions">
-		<a href="/suggested-for-you/add/{{course.uid}}">
+		<a href="/suggested-for-you/add/{{course.uid}}?ref=home">
 			Add to learning plan
 		</a>
-		<a href="/suggested-for-you/remove/{{course.uid}}">
+		<a href="/suggested-for-you/remove/{{course.uid}}?ref=home">
 			Remove
 			<span class="visuallyhidden">from suggested learning list</span>
 		</a>
