learners can interact with learning plan
This reverts commit cc4ec3cef256b0dded39cd3fce7c9434c3b6b155. (+6 squashed commits)
Squashed commits:
[cc4ec3c] 'furniture' changes
[8cd2483] show ', ' in correct place
[c7b6a0d] LearningRecordTable component
[e25b489] i18n course types
[c2d4743] readded learning-record, show 'Other learning' on learning record
[e86a38a] i18n for course.type (+1 squashed commit)
Squashed commits:
[09805f5] Remove learning record from Nav, show all learning plan on home

--- a/src/ui/component/Learning.html
+++ b/src/ui/component/Learning.html
@@ -34,12 +34,17 @@
 
     </div>
     <div class="resource__duration">
-        <span>{{course.type === ('elearning' || 'face-to-face') ? '' : course.type + ', '}}{{course.duration}}</span>
+        <span>
+        {{course.type === ('elearning' || 'face-to-face') ? '' : i18n(course.type) + (course.duration ? ', ' : '')}}
+        {{course.duration}}
+        </span>
     </div>
     <div class="resource__status">
-        <span class="badge badge--info badge--smaller">{{i18n(course.state || 'not started')}}</span>
+        {{#if course.state }}
+        <span class="badge badge--info badge--smaller">{{i18n(course.state)}}</span>
+        {{/if}}
         {{#if course.requiredBy && course.type !== ('elearning' || 'face-to-face') }}
-            <span class="meta">21 Aug 2018</span>
+            <span class="meta">{{formatDate(course.requiredBy)}}</span>
         {{/if}}
     </div>
 </div>
