Added classes for login page

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -1,6 +1,6 @@
 <header role="banner" id="global-header" class="with-proposition">
-	<div class="header-wrapper container">
-		<div class="header-global">
+    <div class="header-wrapper container">
+        <div class="header-global">
             <div class="header-logo">
                 <a href="/" title="Go to the Learning Platform homepage" id="logo">
                     Civil Service Learning
@@ -14,7 +14,7 @@
             </div>
         </div>
 
-	</div>
+    </div>
 </header>
 
 <div id="global-header-bar"></div>
@@ -22,6 +22,6 @@
     <p>
         <strong class="phase-tag">BETA</strong>
         <span>This is a new service – your
-            <a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
+            <a class="lpg-feedback-link" href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
     </p>
 </div>
