Allow multiple modules within a course.
Updated domain model with new Module and Event classes. A Course now can contain
one or more Modules. If a Module is face-to-face it will have Events a User can
register for.

xAPI statements now reference the specific activity a user is interacting with
rather than just the course.

Moved to the new learning catalogue and removed dgraph. data.csv and
/courses/reset have been removed in favour of the new learning catalogue API
populating itself.

--- a/src/ui/component/Course.html
+++ b/src/ui/component/Course.html
@@ -1,5 +1,5 @@
 <div class="course" {{showType}}>
-    <a href="/courses/{{course.uid}}">{{course.title}}</a>
+    <a href="/courses/{{course.id}}">{{course.title}}</a>
     {{#if course.shortDescription}}
     <p>
     {{#if course.courseStatus}}
