--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -1,13 +1,13 @@
 <div class="tile">
 	<h4 class="heading-small">
-		<a href="/courses/{{course.uid}}">
+		<a href="/courses/{{course.id}}">
 			{{course.title}}
 		</a>
 	</h4>
 
 	<p class="tile__attribution">Recommended by profession</p>
 	<ul class="tile__properties">
-		<li class="tile__property">{{course.type}}</li>
+		<li class="tile__property">{{course.getType()}}</li>
 
 		<li class="tile__property">{{course.duration}}</li>
 
@@ -17,10 +17,10 @@
 		{{course.shortDescription}}
 	</p>
 	<p class="tile__actions">
-		<a href="/suggested-for-you/add/{{course.uid}}?ref=home">
+		<a href="/suggested-for-you/add/{{course.id}}?ref=home">
 			Add to learning plan
 		</a>
-		<a href="/suggested-for-you/remove/{{course.uid}}?ref=home">
+		<a href="/suggested-for-you/remove/{{course.id}}?ref=home">
 			Remove
 			<span class="visuallyhidden">from suggested learning list</span>
 		</a>
