--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -17,15 +17,7 @@
 @import 'components/resource';
 @import 'components/badge';
 @import 'components/home-tile';
-
-table {
-	th, td {
-		padding-right: 0;
-		@include media($tablet-breakpoint) {
-			padding-right: em(20, 19);
-		}
-	}
-}
+@import 'components/tables';
 
 .phase-banner {
 	@extend %site-width-container;
