adding more static text, tweaking json resource file

--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -5,10 +5,16 @@
             <a href="/home">Home</a>
         </li>
         <li>
-            <a href="/suggested-for-you">Suggested for you</a>
+            <a href="/learning-plan">{{ i18n('top_nav_learning_plan') }}</a>
         </li>
         <li>
-            <a href="/learning-record">Learning record</a>
+            <a href="/suggested-for-you">{{ i18n('top_nav_suggestions_page') }}</a>
+        </li>
+        <li>
+            <a href="/learning-record">{{ i18n('top_nav_learning_record') }}</a>
+        </li>
+        <li>
+            <a href="/profile">{{ i18n('top_nav_profile') }}</a>
         </li>
         {{/if}}
         <li>
