--- a/src/ui/assets/styles/components/_footer.scss
+++ b/src/ui/assets/styles/components/_footer.scss
@@ -1,7 +1,7 @@
 
 #footer {
   background-color: $footer-background;
-  border-top: 1px solid $footer-border-top;
+  border-top: 10px solid $civil-service;
 
   .footer-wrapper {
     @extend %site-width-container;
