Squashed commits: [2afae88] fix i18n('departments') and profession logic [c17e127] remove console.log [9ce4159] some more logic to do with splitting/joining [8f3b910] 'other' in checkboxes [e655886] remove unused route [1cd3871] lede [5944a54] remove console.log and 'other' output for department [b1919e6] heading-xlarge on profile edit page and 'other' grade [bd64898] multiple choice types, allow saving of multiple areas of work [ab6cf61] options.length [381ef00] rename labelName to inputName [2e2fb4c] script conditional, i18n on view page [c6c1a6b] :script is passed to Page component, rather than have on every page. type-ahead using i18n [c0fca5f] type ahead [b07c221] removing console.log [7670b57] password validation [d14b0e5] update profile [39e7a51] fix routes [66fa6da] profile view styles, new view template and single field edit page with routes

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import 'components/badge';
 @import 'components/home-tile';
 @import 'components/tables';
+@import 'components/accessible-auto-complete';
 
 .phase-banner {
 	@extend %site-width-container;
