--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -22,7 +22,12 @@
     <script src="/js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
     <script src="/js/govuk_frontend_toolkit/govuk/modules.js"></script>
     <script src="/js/govuk_frontend_toolkit/govuk/govuk-template.js"></script>
+
+
     <script src="/js/main.js"></script>
+    {{#if script}}
+        {{{script}}}
+    {{/if}}
 
 </body>
 </html>
