--- a/src/ui/assets/styles/components/_tables.scss
+++ b/src/ui/assets/styles/components/_tables.scss
@@ -38,3 +38,61 @@
 		}
 	}
 }
+
+.key-value-list {
+	margin-top: $gutter;
+
+	// Elements
+	th:last-child,
+	td:last-child {
+		padding-right: 0;
+	}
+	@include e(header) {
+		@include bold-36;
+		margin-top: em(25, 24);
+
+		@include media(tablet) {
+			margin-top: em(45, 36);
+		}
+	}
+	@include e(item-action) {
+		padding-left: $gutter-half;
+		text-align: right;
+	}
+	@include e(key) {
+		width: 50%;
+		font-weight: 400;
+		@include m(auto) {
+			width: auto;
+			@include media(desktop) {
+				width: 180px;
+			}
+		}
+	}
+	@include e(meta) {
+		@include core-16;
+		color: $secondary-text-colour;
+		display: block;
+	}
+	@include e(value) {
+		width: 50%;
+		@include bold-19;
+		padding-left: $gutter-half;
+		@include m(auto) {
+			width: auto;
+		}
+
+		@include m(numeric) {
+			width: 50%;
+			@include bold-19($tabular-numbers: true);
+			padding-left: $gutter-half;
+			letter-spacing: 0.03em;
+		}
+
+		@include m(muted) {
+			width: 50%;
+			color: $secondary-text-colour;
+			padding-left: $gutter-half;
+		}
+	}
+}
