meta: add unit testing, duration handling, and xapi profile changes

--- a/src/ui/component/Learning.html
+++ b/src/ui/component/Learning.html
@@ -33,7 +33,7 @@
     <div class="resource__duration">
         <span>
         {{course.getType() === 'blended' ? '' : i18n(course.getType()) + (course.duration ? ', ' : '')}}
-        {{course.duration}}
+        {{course.getDuration()}}
         </span>
     </div>
     <div class="resource__status">
