--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -9,7 +9,7 @@
 	<ul class="tile__properties">
 		<li class="tile__property">{{course.getType()}}</li>
 
-		<li class="tile__property">{{course.duration}}</li>
+		<li class="tile__property">{{course.getDuration()}}</li>
 
 		<li class="tile__property">{{course.price ? course.price : 'Free'}}</li>
 	</ul>
