src: fix layout bug on home and rename suggestions page url

--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -5,7 +5,7 @@
             <a href="/home">Home</a>
         </li>
         <li>
-            <a href="/suggested-for-you">{{i18n('suggestions_page_title')}}</a>
+            <a href="/suggestions-for-you">{{i18n('suggestions_page_title')}}</a>
         </li>
         <li>
             <a href="/learning-record">Learning record</a>
