add profile back to menu

--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -15,6 +15,9 @@
             <a href="/search">Search</a>
         </li>
         <li>
+            <a href="/search">Profile</a>
+        </li>
+        <li>
             <a href="/sign-out">Sign out</a>
         </li>
         {{else}}
