--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -15,7 +15,7 @@
             <a href="/search">Search</a>
         </li>
         <li>
-            <a href="/search">Profile</a>
+            <a href="/profile">Profile</a>
         </li>
         <li>
             <a href="/sign-out">Sign out</a>
