fonts and tile shows work area

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -1,6 +1,8 @@
 @import 'common/utils';
 @import 'custom';
+
 @import 'common/variables';
+@import 'common/fonts';
 @import 'common/global';
 @import 'common/typography';
 
