--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -8,11 +8,12 @@
 
 @import 'components/header';
 @import 'components/footer';
+@import 'components/home';
 @import 'components/course';
 @import 'components/rightbox';
 @import 'components/basket';
 @import 'components/feedback';
-@import 'components/learning';
+
 @import 'components/results';
 @import 'components/booking';
 @import 'components/breadcrumbs';
