--- a/src/ui/component/Learning.html
+++ b/src/ui/component/Learning.html
@@ -5,7 +5,7 @@
                 {{course.title}}
             </a>
         {{else}}
-            <a href="/courses/{{course.id}}" class="learning__title">
+            <a href="/courses/{{course.id}}">
                 {{course.title}}
             </a>
         {{/if}}
