--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -1,7 +1,7 @@
 <div class="container container--main">
   <div class="grid-row">
       <div class="column-full">
-          <h2 class="heading-medium u-space-t30 lpg-suggestions-section">{{title}}</h2>
+          <h2 class="heading-medium u-space-t30 {{home ? '': 'heading--red-top'}} lpg-suggestions-section">{{title}}</h2>
           {{#if lede}}
           <p>{{lede}}</p>
           {{/if}}
