Search box + results
Fix dependencies

ui changes

styling

move js back!

utility

--- a/src/ui/assets/styles/common/_layout.scss
+++ b/src/ui/assets/styles/common/_layout.scss
@@ -69,3 +69,17 @@
 	content: '';
 	display: table;
 }
+
+.u {
+	@include m(space) {
+		@include m(y30) {
+			margin-top: 30px !important;
+		}
+	}
+
+	@include m(border) {
+		@include m(bgrey2) {
+			border-bottom: 1px solid #bfc1c3;
+		}
+	}
+}
