--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import 'components/results';
 @import 'components/booking';
 @import 'components/breadcrumbs';
+@import 'components/search';
 @import 'components/resource';
 @import 'components/badge';
 @import 'components/home-tile';
