Updating to latest code base and catalogue API changes.

--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -19,7 +19,7 @@
 	<ul class="tile__properties">
             <li class="tile__property">
                 <span class="tile__key">Type</span>
-                <span class="tile__value">{{course.getType()}}</span>
+                <span class="tile__value">{{i18n(course.getType())}}</span>
             </li>
 
             <li class="tile__property">
