--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -16,17 +16,21 @@
   </div>
 
   <div class="grid-row grid-row--suggested">
-      {{#each suggestedLearning.slice(3,suggestedLearning.length) as course}}
+      {{#each suggestedLearning.slice(3,suggestedLearning.length) as course, index}}
       <div class="column-third">
-          <Tile :course/>
+          <Tile :course isLast="{{home && suggestedLearning.length === (index + 4)}}"/>
       </div>
       {{/each}}
   </div>
-  {{#if home === true }}
+
   <div class="grid-row">
       <div class="column-full">
-          <p><a href="/suggestions-for-you">{{i18n('home_page_suggestions_link')}}</a></p>
+      {{#if home === true }}
+        <p><a href="/suggestions-for-you">{{i18n('home_page_suggestions_link')}}</a></p>
+      {{else}}
+        <p><a href="/suggestions/{{title}}">Show all suggestions from {{title}}</a></p>
+      {{/if}}
       </div>
   </div>
-  {{/if}}
+
 </div>
