--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -6,13 +6,14 @@
 		</a>
 	</h4>
 
-	<p class="tile__attribution">Work area:
-	{{#if course.getAreasOfWork().length}}
+	<p class="tile__attribution">{{isLast ? 'Department:' : 'Work area: '}}
+	{{#if isLast}}
+     {{i18n('departments')[signedInUser.department]}}
+	{{elseif course.getAreasOfWork().length}}
 	    {{#each course.getAreasOfWork() as aow, index}}
-
 	        {{i18n('areas-of-work')[aow]}}{{course.getAreasOfWork().length !== index + 1 ? ', ' : ''}}
 	    {{/each}}
-	{{/if}}
+    {{/if}}
 	</p>
 	<ul class="tile__properties">
             <li class="tile__property">
