--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -29,7 +29,7 @@
       <div class="column-full">
       {{#if home === true }}
         <p><a href="/suggestions-for-you">{{i18n('home_page_suggestions_link')}}</a></p>
-      {{else}}
+      {{elseif (suggestedLearning.length === 6)}}
         <p><a href="/suggestions/{{title}}">Show all suggestions from {{title}}</a></p>
       {{/if}}
       </div>
