home suggestion styling and fixing types

--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -1,4 +1,4 @@
-<div class="container container--main">
+<div class="container">
   <div class="grid-row">
       <div class="column-full">
           <h2 class="heading-medium u-space-t30 {{home ? '': 'heading--red-top'}} lpg-suggestions-section">
