only home needs ref=home

--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -38,10 +38,10 @@
 		{{course.shortDescription}}
 	</p>
 	<p class="tile__actions">
-		<a href="/suggestions-for-you/add/{{course.id}}{{home ? '?ref=home' :'?ref=suggestions-for-you'}}">
+		<a href="/suggestions-for-you/add/{{course.id}}{{home ? '?ref=home' :''}}">
 			Add to learning plan
 		</a>
-		<a href="/suggestions-for-you/remove/{{course.id}}?ref=home">
+		<a href="/suggestions-for-you/remove/{{course.id}}{{home ? '?ref=home' :''}}">
 			Remove
 			<span class="visuallyhidden">from suggested learning list</span>
 		</a>
