default value for typeaheads

--- a/src/ui/component/Selects.html
+++ b/src/ui/component/Selects.html
@@ -1,5 +1,5 @@
 {{#if optionType === 'typeahead'}}
-    <TypeAhead :options :inputName :script />
+    <TypeAhead :options :inputName :script :label/>
 {{elseif optionType === 'checkbox'}}
     <Checkboxes :options :inputName :script />
 {{elseif optionType === 'radio'}}
