--- a/src/ui/component/LearningRecordTable.html
+++ b/src/ui/component/LearningRecordTable.html
@@ -13,7 +13,7 @@
             <td><a href="/courses/{{course.id}}">{{course.title}} </a></td>
             <td>{{i18n(course.getType())}}</td>
             <td>{{course.getDuration() || '-'}}</td>
-            <td>{{formatDate(course.record.completionDate)}}</td>
+            <td>{{formatDate(course.getCompletionDate(signedInUser))}}</td>
         </tr>
     {{/each}}
     </tbody>
