Updating learning options

--- a/src/ui/component/Learning.html
+++ b/src/ui/component/Learning.html
@@ -11,10 +11,12 @@
         {{/if}}
         <span class="resource__action">
             {{#if course.record}}
-                {{#if course.record.eventId}}
-                    <a href="/book/{{course.id}}/{{course.record.moduleId}}/{{course.record.eventId}}/cancel">Cancel</a>
+                {{#if course.record.modules && course.record.modules.length && course.record.modules[0].eventId}}
+                    <a href="/book/{{course.id}}/{{course.record.modules[0].moduleId}}/{{course.record.modules[0].eventId}}/cancel">Cancel</a>
                 {{else}}
-                    <a href="/courses/{{course.id}}/{{course.record.moduleId}}">Resume</a>
+                    {{#if course.getType() !== 'blended'}}
+                        <a href="/courses/{{course.id}}/{{course.modules[0].id}}">Resume</a>
+                    {{/if}}
                     {{#if !course.isRequired(signedInUser)}}
                         <a href="/courses/{{course.id}}/delete">Delete</a>
                     {{/if}}
