Profile page updates.

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'common/global';
 @import 'common/typography';
 
+@import 'components/banner';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/home';
