--- a/src/ui/component/TypeAhead.html
+++ b/src/ui/component/TypeAhead.html
@@ -1,5 +1,5 @@
 <select class="form-control type-ahead" id="{{inputName}}" name="{{inputName}}">
-    <option value="other">Select an {{i18n(label)}}</option>
+    <option value="other">Start typing to search</option>
     {{#each options as option}}
         <option value="{{option[0]}}">{{option[1]}}</option>
     {{/each}}
