All profile bugs fixed, hopefully

--- a/src/ui/assets/styles/components/_accessible-auto-complete.scss
+++ b/src/ui/assets/styles/components/_accessible-auto-complete.scss
@@ -18,9 +18,9 @@
 	}
 }
 %inputHighlight {
-	background-color: #005ea5;
-	border-color: #005ea5;
-	color: white;
+	background-color: #005ea5 !important;
+	border-color: #005ea5 !important;
+	color: white !important;
 	outline: none;
 }
 
