--- a/src/ui/assets/styles/components/_header.scss
+++ b/src/ui/assets/styles/components/_header.scss
@@ -76,6 +76,7 @@
 		text-rendering: optimizeLegibility;
 		border-bottom: 1px solid transparent;
 
+		background: url('/img/gov.uk_logotype_crown.png') no-repeat;
 		background-size: 36px 32px;
 		background-position: 0 0;
 		@include ie-lte(8) {
