--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -1,4 +1,9 @@
 <nav id="proposition-menu">
+
+    <a href="/" title="Go to the Learning Platform homepage" id="proposition-name">
+        Civil Service Learning
+    </a>
+
     <ul id="proposition-links">
         {{#if signedInUser}} {{#if signedInUser.hasCompleteProfile()}}
         <li>
