Consistent title in profile.

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -1,5 +1,5 @@
 <header role="banner" id="global-header" class="with-proposition">
-    <div class="header-wrapper">
+    <div class="header-wrapper container">
         <div class="header-global">
             <div class="header-logo">
                 <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content">
