--- a/src/ui/assets/styles/components/_search.scss
+++ b/src/ui/assets/styles/components/_search.scss
@@ -62,3 +62,14 @@
 		margin-bottom: 0;
 	}
 }
+
+.search {
+	@include e(suggestion) {
+		top: -20px;
+		position: relative;
+
+		a {
+			font-style: italic;
+		}
+	}
+}
