--- a/src/ui/component/Rightbox.html
+++ b/src/ui/component/Rightbox.html
@@ -1,6 +1,7 @@
-<div class="right-box">
-    <h1>{{ dataRows.label}}</h1>
-    <table>
+<aside class="govuk-related-items govuk-related-items--flush govuk-related-items--keylined" role="complementary">
+    <h2 class="heading-small">{{ dataRows.label}}</h2>
+    <table class="table-simple table--top u-space-b30">
+        <caption class="visuallyhidden">Details about the course</caption>
         <tbody>
         {{#if dataRows.dataRows.length}}
         {{#each dataRows.dataRows as row}}
@@ -12,4 +13,4 @@
         {{/if}}
         </tbody>
     </table>
-</div>
+</aside>
