Fix add to learning plan on search.

--- a/src/ui/assets/styles/components/_tables.scss
+++ b/src/ui/assets/styles/components/_tables.scss
@@ -96,3 +96,29 @@
 		}
 	}
 }
+
+
+.table--top {
+	td,
+	th {
+		vertical-align: top;
+	}
+}
+
+.table {
+	margin-bottom: 30px;
+}
+
+.table-simple {
+
+	th {
+		font-weight: bold;
+	}
+
+}
+
+.table--fix-first {
+	@include media(desktop) {
+		width: 460px;
+	}
+}
