--- a/src/ui/component/Rightbox.html
+++ b/src/ui/component/Rightbox.html
@@ -6,7 +6,7 @@
         {{#if dataRows.dataRows.length}}
         {{#each dataRows.dataRows as row}}
         <tr>
-            <td>{{row.label}}</td>
+            <th>{{row.label}}</th>
             <td>{{row.value}}</td>
         </tr>
         {{/each}}
