New search result styling

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import 'components/booking';
 @import 'components/breadcrumbs';
 @import 'components/search';
+@import 'components/search-results';
 @import 'components/resource';
 @import 'components/badge';
 @import 'components/home-tile';
