--- a/src/ui/component/Feedback.html
+++ b/src/ui/component/Feedback.html
@@ -6,13 +6,14 @@
                 <div class="feedback-details">
                     <h2>Help us improve Civil Service Learning</h2>
                     <p>Don’t include personal or financial information like your National Insurance number or credit card details.</p>
-                    <form action="/feedback.record" method="POST">
+                    <form action="/feedback.record" method="post">
                         <label for="whatDoing">What were you doing?</label>
                         <input name="whatDoing" id="whatDoing">
                         <label for="wentWrong">What went wrong?</label>
                         <input name="wentWrong" id="wentWrong">
                         <input type="hidden" name="pageUrl" id="pageUrl" value="{{currentReq.originalUrl}}">
                         <button class="button" name="commit" type="submit">Send</button>
+                        <input type="hidden" name="_csrf" value="{{_csrf}}">
                     </form>
                 </div>
             </div>
