--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="/img/opengraph-image.png">
     <title>{{title}} &ndash; {{i18n('proposition_name')}}</title>
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id={{config.GOOGLE_ANALYTICS_ID}}"></script> {{{config.GOOGLE_ANALYTICS_CODE}}}
 </head>
 <body>
