--- a/src/ui/component/Search.html
+++ b/src/ui/component/Search.html
@@ -5,7 +5,7 @@
         </div>
         <div class="column-one-half ">
             <div class="search-box">
-                <form name="searchLearning" method="GET" action="/search">
+                <form name="searchLearning" method="get" action="/search">
                     <div class="form-group search-box__group ">
                         <label class="visuallyhidden">Search all available learning</label>
                         <input class="form-control search-box__input" id="q" type="search" name="q" value="" placeholder="Search CSL">
